Clarify theorems and update mathematical formatting
Clarified the statements of Theorem 2.4 and Theorem 2.5 regarding the sufficient and necessary conditions for safety of the set \mathcal{C}. Updated the formatting of mathematical expressions for consistency.

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -412,6 +412,7 @@ $$\begin{aligned}
 \text{Theorem 2.4)}& \q h\; \text{ is CBF } \Longrightarrow  u\in K_\text{cbf}\; \text{ makes }\; \mathcal{C}\; \text{safe}. \q\q(\text{Sufficiency})\\
 \text{Theorem 2.5)}& \q \exists u\; \text{ makes }\; \mathcal{C}\; \text{ safe } \Longrightarrow h|_\mathcal{C}\; \text{ is CBF} \q\q\q\q(\text{Necessity}).
 \end{aligned}$$
+
 the theorem 2.4 states the sufficient condition for $\mathcal{C}$ to be safe and the theorem 2.5 states the necessary condition for $\mathcal{C}$ to be safe.
 
 <div style="height: 0.1em;"></div>
@@ -610,9 +611,8 @@ Note that we're discussing about the **'real-world' application** and hence we n
 > [!abstract] Q. How to compute $h$ in theorem 3.3 in practice?
 > 
 > - In some cases, it is possible to compute $h$ in **closed form**.
-> 
 > - If it is not possible, we need to approximate $h$ by **simulating the system trajectory for a finite horizon and compute the infimum numerically.**
-> 	- However, as we observed in CBF-QP,  we need to compute the gradient of $h$ to utilize $h$ in QP problem that requires **huge computational burden as the dimension of the system grows.**
+> 	- However, as we observed in CBF-QP, we need to compute the gradient of $h$ to utilize $h$ in QP problem that requires **huge computational burden as the dimension of the system grows.**
 
 To overcome this issue, another approach is introduced.
 
@@ -947,7 +947,7 @@ First, begin with the following basic and straightforward result.
 
 ##### Prop 4.2) Recursive Invariance of Auxiliary safe sets
 
-> For a given $i\in[r]$, if $\mathcal{C}_i$ is forward invariant, then $\mathcal{C}_{i-1}$ is forward invariant whenever $p_i>0$ and $x_0\in\mathcal{C}_i\cap\mathcal{C}_{i-1}$.
+> For a given $i\in \[r\]$, if $\mathcal{C}_i$ is forward invariant, then $\mathcal{C}_{i-1}$ is forward invariant whenever $p_i>0$ and $x_0\in\mathcal{C}_i\cap\mathcal{C}_{i-1}$.
 
 **Proof)** Since $\mathcal{C}_i$ is forward invariant, for a given $x_0\in\mathcal{C}_i\cap\mathcal{C}_{i-1}$, $x(t)\in\mathcal{C}_i$ for all $t\in[0,\infty)$, i.e. 
 
