Fix formatting and clarify conditions in CBF document
Corrected formatting issues in mathematical expressions and clarified conditions for choosing the proper gain matrix.

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -980,13 +980,14 @@ So far, we've observed that two conditions are required for invariance of $\math
 Q. What is the meaning of these conditions?
 
 > [!note] Meaning of these conditions
+> 
 > **1. $p_i>0$ for each $i\in[r]$**
 > 
 > $\to$ As we assumed that $-p_i$ are the poles of a closed-loop system, $F-GK_\al$ be Hurwitz with totally negative, i.e. each eigenvalue of $F-GK_\al$ is negative real.
 > This makes ==a closed-loop system converges without oscillation(overdamped).==
 > (While underdamping system converges to the objective state, it may violate the safety condition because of oscillation.)
 > 	
-> **2. $x_0\in \mathcal{C}_i$ for each $i\in[r]$**
+> **2. $x_0\in \mathcal{C}_i$ for each $i\in\[r\]$**
 > 
 > $\to$ Since $x_0\in\mathcal{C}_i$ implies $\nu_i(x_0)=\dot\nu_{i-1}(x_0)+p_i\nu_{i-1}(x)\geq 0$, we obtain the lower bound for $p_i$.
 > 
@@ -999,7 +1000,9 @@ Finally, we can guarantee the existence of ECBF using these conditions.
 
 > Suppose $K_\al$ is chosen s.t. $F-GK_\al$ is Hurwitz and total negative(resulting in negative real poles) and the eigenvalues satisfy
 >
-> $$\lambda_i(F-GK_\al)\geq -\frac{\dot\nu_{i-1}(x_0)}{\nu_{i-1}(x_0)},$$then $\mu\geq -K_\al\eta_b(x)$ guarantees $h(x)$ is an exponential CBF.
+> $$\lambda_i(F-GK_\al)\geq -\frac{\dot\nu_{i-1}(x_0)}{\nu_{i-1}(x_0)},$$
+>
+> then $\mu\geq -K_\al\eta_b(x)$ guarantees $h(x)$ is an exponential CBF.
 
 This theorem provides a sufficient conditions for the existence of ECBF, i.e. 
 
