Fix typo in mathematical notation for unique solution

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -596,7 +596,7 @@ Now, the following theorem provides the way to construct a CBF satisfying $\math
 > 
 > and define $\mathcal{C}:=\{x\in D:h(x)\geq 0\}$.
 > 
-> Suppose that for each $x$ there exists a unique $x^*$ s.t. $h(x)=\rho(x^*)$ and $\phi_\be(\tau,x)=x^*$ for some $\tau\geq 0$. Then,
+> Suppose that for each $x$ there exists a unique $x^\*$ s.t. $h(x)=\rho(x^*)$ and $\phi_\be(\tau,x)=x^*$ for some $\tau\geq 0$. Then,
 > 1. $h$ is a CBF.
 > 2. $\mathcal{C}\subseteq A$.
 > 3. $\be(x)\in K_\text{cbf}(x)$ for all $x\in\mathcal{C}$.
