Improve formatting of CBF definition explanation
Formatted mathematical notation for clarity.

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -883,7 +883,11 @@ $\to$ Generalize the definition of CBF to the systems with higher relative degre
 
 > [!note] ECBF generalizes CBF
 > 
-> By letting $r=1$, then $\eta_b(x)=h(x)$ and hence $$\mu=-K_\al\eta_b(x)=-K_\al h(x)=-\al(h(x))$$ where $\al(s)=K_\al s\in\text{class }\mathcal{K}_\infty$.
+> By letting $r=1$, then $\eta_b(x)=h(x)$ and hence
+>
+> $$\mu=-K_\al\eta_b(x)=-K_\al h(x)=-\al(h(x))$$
+>
+> where $\al(s)=K_\al s\in\text{class }\mathcal{K}_\infty$.
 
 Moreover, ECBF can be directly incorporated to the optimization-based control instead of CBF.
 
