--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -244,7 +244,7 @@ This can be formally stated as:
 > 
 > and $\gamma:\R_{\ge0}\to\R_{\ge 0}$ is a class $\mathcal{K}$ function,
 > 
-> then the system $\(\*\)$ is **asymptotically stabilizable** to $V(x^*)=0$, i.e. $x^*=0$.
+> then the system $\(\*\)$ is **asymptotically stabilizable** to $V(x^\*)=0$, i.e. $x^\*=0$.
 
 **Reduction of complexity:** By the statement that we stated above, we only need to treat the one-dimensional (scalar) value $V(x)$ from $(\dagger)$ instead of treating the $n$-dimensional state vector $x(t)$ of $(*)$.
 
@@ -272,7 +272,7 @@ Based on the argument above, we **do not need to explicitly construct** the feed
 
 > [!note] Key insight: Affine constraint
 > 
-> The inequality in (**) is **affine in $u$**.
+> The inequality in (\*\*) is **affine in $u$**.
 > 
 > - This is crucial because it allows us to **formulate the controller synthesis problem as an Optimization Problem** (e.g., Quadratic Program).
 
