Revise welcome post metadata
Updated post metadata for welcome page.

--- a/_posts/2026-02-06-welcome.md
+++ b/_posts/2026-02-06-welcome.md
@@ -2,10 +2,9 @@
 layout: post
 title: Welcome to My Study Notes
 date: 2025-09-01 00:00:00 +0900
-description: An archive of my study notes, paper reviews, and mathematical derivations.
-tags: intro control-theory mathematics
-categories: introduction
-featured: true
+description:
+tags: Welcome
+categories: study
 ---
 
 ## Welcome
