--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -9,6 +9,17 @@ categories: study
 featured: true
 pdf: Control Barrier Function.pdf
 ---
+> [!TIP]
+> **For a cleaner view**, especially for complex mathematical formulas, please refer to the attached PDF.
+> 
+> <div style="margin-top: 10px; display: flex; align-items: center; gap: 15px;">
+>   <a href="/assets/pdf/{{ page.pdf }}" class="btn btn-sm z-depth-0" role="button" target="_blank">
+>     <i class="fas fa-file-pdf"></i> Download PDF
+>   </a>
+>   <span style="font-size: 0.85rem; color: #888;">
+>     <i class="fas fa-history"></i> Last updated: {{ page.updated | date: "%b %d, %Y" }}
+>   </span>
+> </div>
 
 Control Barrier Function is one of the most popular methods of 'Safety Control'.
 
