Add PDF download link to CBF post
Added a download link for the PDF in the post.

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -9,8 +9,9 @@ categories: study
 featured: true
 pdf: Control Barrier Function.pdf
 ---
-> [!TIP]
-> **For a cleaner view**, especially for complex mathematical formulas, please refer to the attached PDF.
+> [!TIP] Download PDF
+> 
+> For a cleaner view, please refer to the attached PDF.
 > 
 > <div style="margin-top: 10px; display: flex; align-items: center; gap: 15px;">
 >   <a href="/assets/pdf/{{ page.pdf }}" class="btn btn-sm z-depth-0" role="button" target="_blank">
