--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -18,7 +18,7 @@ pdf: Control Barrier Function.pdf
 >     <i class="fas fa-file-pdf"></i> Download PDF
 >   </a>
 >   <span style="font-size: 0.85rem; color: #888;">
->     <i class="fas fa-history"></i> Last updated: {{ page.updated | date: "%b %d, %Y" }}
+>     <i class="fas fa-history"></i> Last updated: Feb. 15. 2026.
 >   </span>
 > </div>
 
