Add 'To Be Uploaded' note to Rigidity post

--- a/_posts/2026-01-10-Rigidity.md
+++ b/_posts/2026-01-10-Rigidity.md
@@ -21,3 +21,5 @@ pdf: Rigidity Theory.pdf
 >     <i class="fas fa-history"></i> Last updated: Sep. 14. 2025.
 >   </span>
 > </div>
+
+To Be Uploaded
